src/style/kartlagfane.css
/**** CSS for Kartlagfanen og alle dens underkomponenter *****/

/* Selve panelet */
.kartlag_fanen {
  position: absolute;
  height: 100%;
  right: 0px;
  top: 0px;
  width: 408px;
  padding-top: 50px;
  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}

@media only screen and (max-width: 768px) {
  .kartlag_fanen {
    border-top: 1px solid lightgrey;
    width: 100%;
    height: 45vh;
    top: auto;
    bottom: 0;
    padding-top: 0;
    background-color: #eee;
    z-index: 100;
  }
}

.scroll_area {
  background: #eee;
  max-height: calc(100% - 48px);
  overflow-y: auto;
  width: 100%;
  height: calc(100vh - 48px);
}

@media only screen and (max-width: 768px) {
  .scroll_area {
    height: calc(50vh);
  }
}

/* Overskriftene i panelet */
.container_header {
  background: #eee;
  margin: 0px;
  font-weight: 400;
  padding-left: 16px;
}

/* Overskrift på grupperte element*/
h4.container_header {
  border-top: 1px solid #ccc;
  text-align: left;
  border-bottom: none;
  padding-left: 20px;
}

/* Tittelboksen bruker Listitems fra Material-Ui, uten endringer */
.listheadingbutton {
  border-radius: 0px;
  border: 0px;
  width: 100%;
  padding: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 12pt;
  display: flex;
  align-items: center;
  background-color: #ccc;
}
.listheadingbutton span {
  flex: 1;
}

/* Side bar show/hide button */
.toggle-side-bar-wrapper {
  position: absolute;
  top: 60px;
  right: 0px;
}
.toggle-side-bar-wrapper.side-bar-open {
  right: 407px;
}
#toggle-side-bar-button {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  border: 1px solid grey;
  border-right: 0;
  width: 32px !important;
  min-width: 32px;
  max-width: 32px;
  height: 55px;
  padding: 0;
}
.toggle-side-bar-button:focus {
  border: 2px solid blue;
}

@media only screen and (max-width: 768px) {
  .toggle-side-bar-wrapper {
    transform: rotate(90deg);
    right: calc(50vw - 18px);
    top: auto;
    bottom: -14px;
  }
  .toggle-side-bar-wrapper.side-bar-open {
    right: calc(50vw - 18px);
    top: auto;
    bottom: calc(45vh - 14px);
  }
}

#show-layers-icon {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Sorted layers */
.sorted-layers-subheaders .MuiListSubheader-root {
  background-color: #dedede;
  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
  font-size: 17px;
}
.sorted-layers-subheaders .MuiListItem-root {
  padding-top: 5px;
  padding-bottom: 5px;
}

/* Sortering, filtrering og søk -delen */
.header-layers-menu {
  background-color: white;
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
}
.sort-filter-layers-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 4px 12px 16px;
}
.sort-filter-icons-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
}
.selected-tags-wrapper {
  border-top: 1px solid rgba(0, 0, 0, 0.12);
  padding: 5px 0 10px 0;
  margin: 0 16px 0 16px;
}
.selected-tags-tittle {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
#filters-header.MuiTypography-root {
  padding-bottom: 5px;
}
#filter-all-button.MuiButton-root {
  text-transform: none;
}
#filter-all-button.MuiButton-textPrimary {
  color: #296d98;
  font-weight: 500;
}
#filter-all-button.MuiButton-textSecondary {
  color: #888;
}
#filter-layers-menu-item.MuiListItem-gutters {
  padding-left: 14px;
  padding-right: 22px;
}
#filter-layers-menu-icon.MuiListItemIcon-root {
  min-width: 35px;
}
#sort-layers-menu-item.MuiListItem-gutters {
  padding-left: 25px;
  padding-right: 25px;
}
#layers-filter-chips.MuiChip-colorPrimary {
  background-color: #697f8a;
}

/* leyend link */
.legend-link-background {
  background-color: #eee;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 10;
}
.legend-link-wrapper {
  background-color: rgba(145, 163, 176, 0.5);
}
#legend-icon.layer-icon-wrapper {
  margin-left: 4px;
}
.legend-text {
  color: rgba(0, 0, 0, 0.64);
  font-size: 17px;
  font-weight: 500;
}

/* Legend menu */
.legend-wrapper {
  background-color: #fff;
  height: 100%;
  overflow-y: auto;
}
#legend-title-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  background-color: rgba(145, 163, 176, 0.5);
  width: 100%;
  height: 50px;
}
#legend-title-wrapper .MuiListItemIcon-root {
  min-width: 35px;
}
.legend-title-text {
  margin-left: 10px;
  font-size: 18px;
  color: rgba(0, 0, 0, 0.64);
  font-weight: 500;
}
#back-from-legend.MuiIconButton-colorPrimary {
  color: rgba(0, 0, 0, 0.64);
}
.legend-content-wrapper .MuiListSubheader-root {
  max-height: 40px;
  color: #000;
}
.legend-content-wrapper {
  padding: 0 24px 24px 24px;
}

/* layers and sublayers wrappers */
@media only screen and (max-width: 768px) {
  #layers-list-wrapper {
    padding-bottom: 75px;
  }
}
#layers-list-wrapper.MuiList-padding {
  padding-top: 0;
}

/* Open sublayer elements  */
.collapsed_container {
  background: white;
  border-top: 1px solid #eeeeee;
  border-bottom: 1px solid #ccc;
  width: 100%;
}
.collapsed_container h4 {
  margin-bottom: 5px;
  display: block;
  font-size: 8pt;
  width: 100%;
  font-weight: normal;
}
.tags {
  background: lightgrey;
  padding: 5px;
  padding-left: 10px;
  padding-right: 10px;
  font-size: 8pt;
  display: inline-block;
  border-radius: 3px;
  margin: 2px;
}
.tags_container {
  text-align: center;
}
.iconbutton:hover {
  opacity: 50%;
  cursor: pointer;
}

/* Sublayers */
.collapsed_container .underlag {
  width: 100%;
  /* background: #f7f7f7; */
  background: rgb(252, 252, 252);
  border-bottom: 1px solid #e2e2e2;
  display: block;
  text-align: left;
}

.underlag div:first-child {
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.underlag svg {
  padding-right: 15px;
  vertical-align: middle;
}

.polygonbutton {
  padding: 5px;
  margin-left: 2px;
  font-size: 12pt;
}

.polygonbutton svg {
  vertical-align: middle;
  height: 20px;
}

.polygonbutton.done {
  background: #baf2b3;
}

.polygonbutton.remove {
  background: #ffd3cf;
}

.polygonbutton.edit {
  background: #d5f1f5;
}

.polygonbutton:focus {
  border: 2px solid blue;
}

/* Layer icons */
.layer-list-element-icon {
  padding: 8px 0 8px 5px;
}
#list-element-sublayer {
  padding-top: 2px;
  padding-bottom: 2px;
}
.badge-enabled > .MuiBadge-colorPrimary {
  background-color: #22aa58 !important;
}
#bookmark.layer-icon-wrapper {
  margin-bottom: 2px;
}
#bookmark-icon.MuiListItemIcon-root {
  justify-content: flex-end;
}

/* sublayer opacity sliders */
.opacity-slider-wrapper {
  min-height: 60px;
  display: flex;
  align-items: center;
  padding: 0 0 5px 0 !important;
}
.opacity-slider-wrapper .MuiSlider-colorPrimary {
  color: #22aa58;
}
#opacity-invisible-icon.MuiSvgIcon-colorPrimary {
  color: #ccc;
}
#opacity-visible-icon-disabled.MuiSvgIcon-colorPrimary {
  color: #ccc;
}
#opacity-visible-icon.MuiSvgIcon-colorPrimary {
  color: #666;
}

/* Layer and sublayer details component */
.layer-details-div {
  background: #eee;
  max-height: 100vh;
  height: 100vh;
  overflow-y: auto;
  background-color: white;
  z-index: 100;
  position: absolute;
  right: 0px;
  top: 0px;
  width: 408px;
  padding-top: 50px;
}
@media only screen and (max-width: 768px) {
  .layer-details-div {
    height: calc(50vh);
    width: 100vw;
    padding-top: 0;
    border-top: 1px solid #aaa;
    padding-bottom: 100px;
  }
}

/* Open sublayer elements  */
.sublayer-details-div {
  background: white;
  /* border-top: 1px solid #ccc; */
  border-bottom: 1px solid #bbb;
  padding-bottom: 10px;
  width: 100%;
}
.sublayer-details-div h4 {
  margin-bottom: 5px;
  display: block;
  font-size: 10pt;
  width: 100%;
  font-weight: normal;
}

.data-owner-wrapper {
  padding-top: 10px;
}

#layer-details-list {
  background-color: #ddd;
  border-top: 1px solid #bbb;
  border-bottom: 1px solid #bbb;
}

#sublayer-details-list {
  background-color: #eee;
  padding-top: 2px;
  padding-bottom: 2px;
  border-bottom: 1px solid #bbb;
}

.sublayer-details-wrapper {
  background-color: white;
  padding: 10px 14px 15px 34px;
}

#details-title-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  background-color: rgba(145, 163, 176, 0.5);
  width: 100%;
  height: 50px;
}
@media only screen and (max-width: 768px) {
  #details-title-wrapper {
    height: 45px;
  }
}

#details-title-wrapper .MuiListItemIcon-root {
  min-width: 35px;
}

.details-title-text {
  margin-left: 10px;
  font-size: 18px;
  color: rgba(0, 0, 0, 0.64);
  font-weight: 500;
}
@media only screen and (max-width: 768px) {
  .details-title-text {
    font-size: 16px;
  }
}

/* ------------------------------------------------------ */
/* Selvbygget toggle-element - NOT USED FOR NOW - REMOVE? */
.toggle {
  margin: 10px;
  font-size: 10pt;
  text-align: center;
  color: gray;
}

.toggle span {
  padding: 5px;
}

.toggle .switch {
  position: relative;
  display: inline-block;
  width: 40px;
  height: 20px;
  border-radius: 15px;
  box-sizing: border-box;
}

.toggle .switch input {
  /* Hide default HTML checkbox */
  opacity: 0;
  width: 0;
  height: 0;
}

.toggle .slider {
  border-radius: inherit;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: white;
  border: 1px solid gray;
}

.toggle input:checked + .slider {
  border-color: black;
  background-color: black;
}

.toggle input:focus + .slider {
  box-shadow: 0 0 1px blue;
}

.toggle .slider:before {
  /* The toggle-ball */
  border-radius: 50%;
  position: absolute;
  content: "";
  height: 16px;
  width: 16px;
  left: 2px;
  top: 1px;
  background: gray;
}

.toggle input:checked + .slider:before {
  background-color: white;
  left: auto;
  right: 2px;
}

